--- a/obtener.html
+++ b/obtener.html
@@ -75,7 +75,7 @@ table {
                     <div class="modal-content">
                       <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLongTitle">Editar Producto</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="borrarFila()">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
